[2.0][FIX] Kanban Overlap Issue

--- a/addons/web_flectra/static/src/scss/common_style.scss
+++ b/addons/web_flectra/static/src/scss/common_style.scss
@@ -232,4 +232,12 @@
         }
     }
 }
-
+.o_cp_bottom_right{
+    ul.dropdown-menu.dropdown-menu-right.list-inline{
+        left: inherit !important;
+        right: 0 !important;
+    }
+}
+.o_kanban_record:hover, .o_app:hover{
+    z-index: 1;
+}
